--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
         android:roundIcon="@mipmap/ic_logofinal_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.NorteGoJetpackCompose"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
             android:name=".login.SplashApp"
