--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name=".login.SplashApp"
+            android:name=".vistas.login.SplashApp"
             android:exported="true"
             android:theme="@style/Theme.NorteGoJetpackCompose">
             <intent-filter>
